Menambahkan paragraf di Index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1> Hello World! </h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit neque suscipit at enim sunt, commodi similique a laboriosam et quos labore natus repellat ipsam. Accusantium, labore. Assumenda id aperiam esse.</p>
 </body>
 </html>
