--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 <body>
     <h1> Hello World! </h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit neque suscipit at enim sunt, commodi similique a laboriosam et quos labore natus repellat ipsam. Accusantium, labore. Assumenda id aperiam esse.</p>
+    <ul>
+        <li>satu</li>
+        <li>dua</li>
+    </ul>
 </body>
 </html>
